# rust-basics

./: .gitignore  Cargo.toml  README.md
box_smart_pointers/: Cargo.toml
box_smart_pointers/src/: main.rs
challenges/arithmetic_expression_tree/: Cargo.toml
challenges/arithmetic_expression_tree/src/: lib.rs
challenges/expression_evaluator/: Cargo.toml
challenges/expression_evaluator/src/: lib.rs
challenges/inventory_management_system/: Cargo.toml
challenges/inventory_management_system/src/: lib.rs  main.rs
challenges/recursive_dsa_with_box/: Cargo.toml
challenges/recursive_dsa_with_box/src/: lib.rs
challenges/simple_calculator/src/: lib.rs
challenges/simple_commando_parser/: Cargo.toml
challenges/simple_commando_parser/src/: lib.rs  main.rs
challenges/simple_linked_list/: Cargo.toml
challenges/simple_linked_list/src/: lib.rs
challenges/student_grade_tracker/: Cargo.toml
challenges/student_grade_tracker/src/: main.rs
cycle_memory_leak/: Cargo.toml
cycle_memory_leak/src/: main.rs
design_patterns/behavioural/command/command_guru/: Cargo.toml
design_patterns/behavioural/command/function_pointer/: Cargo.toml
design_patterns/behavioural/command/function_trait_object/: Cargo.toml
design_patterns/behavioural/command/trait_object/: Cargo.toml
design_patterns/behavioural/interpreter/: Cargo.toml
design_patterns/behavioural/interpreter/src/: main.rs
design_patterns/behavioural/new_type/: Cargo.toml
design_patterns/behavioural/new_type/src/: main.rs
design_patterns/behavioural/strategy/closure/: Cargo.toml  main.rs
design_patterns/behavioural/strategy/trait/: Cargo.toml
design_patterns/behavioural/visitor/book_example/: Cargo.toml
design_patterns/behavioural/visitor/guru_shape_example/: Cargo.toml  main.rs
dsa/linked_list/bad_singly_linked/: Cargo.toml
dsa/linked_list/bad_singly_linked/src/: main.rs
dsa/linked_list/linked_list_basic/src/: main.rs
dsa/linked_list/ok_singly_linked/: Cargo.toml
functional_language/: Cargo.toml
functional_language/src/: main.rs
functions/src/: main.rs
idioms/borrowed_types/: Cargo.toml
idioms/collections_smart_pointers/: Cargo.toml
idioms/concatenating_strings/: Cargo.toml
idioms/constructor/src/: main.rs
idioms/default/src/: main.rs
input_output_challenge/: Cargo.toml  names.txt
input_output_challenge/src/: main.rs
module_challenge/: Cargo.toml
module_challenge/src/: main.rs
smart_pointers/src/: lib.rs  main.rs
src/: bad_singly_linked.rs  lib.rs  main.rs  ok_singly_linked.rs
src/linked_list/: main.rs
src/minigrep/: main.rs
(+17 files in other folders)
