[workspace]
resolver = "2"

members = [
    "functional_language",
    "input_output_challenge",
    "module_challenge",
    "smart_pointers",
    "design_patterns/behavioural/command/command_guru",
    "design_patterns/behavioural/command/function_pointer",
    "design_patterns/behavioural/command/function_trait_object",
    "design_patterns/behavioural/command/trait_object",

]


