[workspace]
resolver = "2"

members = [
    "functional_language",
    "input_output_challenge",
    "module_challenge",
    "smart_pointers",
    "design_patterns/behavioural/command/command_guru",
    "design_patterns/behavioural/command/function_pointer",
    "design_patterns/behavioural/command/function_trait_object",
    "design_patterns/behavioural/command/trait_object",
    "design_patterns/behavioural/interpreter",
    "design_patterns/behavioural/new_type",
    "design_patterns/behavioural/strategy/closure",
    "design_patterns/behavioural/strategy/trait",
    "design_patterns/behavioural/visitor/book_example",
    "design_patterns/behavioural/visitor/guru_shape_example",
    "idioms/borrowed_types",
    "idioms/concatenating_strings",
    "idioms/constructor",
    "idioms/default",
    "idioms/collections_smart_pointers",

]


