[workspace]
resolver = "2"

members = [
    "functional_language",
    "input_output_challenge",
    "module_challenge",
    "box_smart_pointers",
    "design_patterns/behavioural/command/command_guru",
    "design_patterns/behavioural/command/function_pointer",
    "design_patterns/behavioural/command/function_trait_object",
    "design_patterns/behavioural/command/trait_object",
    "design_patterns/behavioural/interpreter",
    "design_patterns/behavioural/new_type",
    "design_patterns/behavioural/strategy/closure",
    "design_patterns/behavioural/strategy/trait",
    "design_patterns/behavioural/visitor/book_example",
    "design_patterns/behavioural/visitor/guru_shape_example",
    "idioms/borrowed_types",
    "idioms/concatenating_strings",
    "idioms/constructor",
    "idioms/default",
    "idioms/collections_smart_pointers",
    "idioms/memory",
    "dsa/linked_list/linked_list_basic",
    "dsa/linked_list/bad_singly_linked",
    "dsa/linked_list/ok_singly_linked",
    "basics",
    "smart_pointers",
    "cycle_memory_leak",
    "challenges/recursive_dsa_with_box",
    "challenges/inventory_management_system", "challenges/expression_evaluator", "challenges/simple_commando_parser",
]
